added netlify seeding

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,8 @@
 
 [build]
   command = "bun run build"
-  publish = ".next"
+  publish = "out"
 
 [build.environment]
   NETLIFY_NEXT_PLUGIN_SKIP = "true"
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+  BUN_VERSION = "1.1.20"
